--- a/src/app/pages/reports/all/all.component.html
+++ b/src/app/pages/reports/all/all.component.html
@@ -36,7 +36,7 @@
               <div class="card-body d-flex align-items-center justify-content-between">
                 <a href="http://localhost:4200/sale" class="text-white">Ver Detalle</a>
 
-                <span class="text-white">190</span>
+                <span class="text-white" *ngFor="let data of listsSale">{{data.ventas}}</span>
               </div>
             </div>
           </div>
