--- a/src/app/pages/reports/by-commercial/by-commercial.component.html
+++ b/src/app/pages/reports/by-commercial/by-commercial.component.html
@@ -4,22 +4,44 @@
         <h2>Reporte Por Comercial</h2>
       </div>
       <div class="col-12 py-6 ">              
-        <form action="http://localhost:4200/sale">
+        <form (keydown.enter)="$event.preventDefault()" [formGroup]="reportForm" autocomplete="off">
+
           <label>
             Desde:
-            <input type="date" name="bday" />
-          </label>&nbsp; 
+            <input type="date" id="fecha_inicio" class="form-control" focus="true"
+              placeholder="{{'FORMS.FIELD_NAMES.fecha_inicio.placeholder' }}" formControlName="fecha_inicio"
+              [ngClass]="{ 'is-invalid': form['fecha_inicio'].errors && (form.fecha_inicio.dirty || form.fecha_inicio.touched || submitted) }" />
+
+            <div
+              *ngIf="form['fecha_inicio'].errors && (form.fecha_inicio.dirty || form.fecha_inicio.touched || submitted)"
+              class="invalid-feedback" align="left">
+              <div *ngIf="form['fecha_inicio'].errors['required']">
+                {{'FORMS.VALIDATION.required' | translate | replaceAttribute:':attribute': translatedLabel}}
+              </div>
+            </div>
+          </label>&nbsp;
           <label>
             Hasta:
-            <input type="date" name="bday" />
-          </label>&nbsp; 
-          <button class="search-btn" type="submit">   <span>Buscar</span>     </button>         
+            <input type="date" id="fecha_fin" class="form-control" focus="true"
+              placeholder="{{'FORMS.FIELD_NAMES.fecha_fin.placeholder' }}" formControlName="fecha_fin"
+              [ngClass]="{ 'is-invalid': form['fecha_fin'].errors && (form.fecha_fin.dirty || form.fecha_fin.touched || submitted) }" />
+            <div *ngIf="form['fecha_fin'].errors && (form.fecha_fin.dirty || form.fecha_fin.touched || submitted)"
+              class="invalid-feedback" align="left">
+              <div *ngIf="form['fecha_fin'].errors['required']">
+                {{'FORMS.VALIDATION.required' | translate | replaceAttribute:':attribute': translatedLabel}}
+              </div>
+            </div>
+          </label> &nbsp;
+          <button class="btn btn-primary" (click)="listData()"> <span>Buscar</span> </button>
+
+          <!-- <p><button>Buscar Reporte</button></p> -->
         </form>
       </div>
       <div class="row my-3">
         <div class="col-md-6 text-center">
-          <h2>Gráfico de Comercial</h2>
-          <canvas id="chart"> {{chart}}</canvas>
+          <h2>Reporte de Ventas por Comercial</h2>
+          <canvas id="chartBySeller" class="centrar-div" height="250"> {{chartBySeller}}</canvas>
+
         </div>
         <div class="col-md-6 text-center">
           <h2>Tabla de Ventas por Comercial</h2>
@@ -27,38 +49,23 @@
           <div class="table-responsive">
             <table class="table table-success">
               <thead>
-                <tr class="table-secondary">                                       
+                <tr class="table-secondary">
                   <th>Comercial</th>
                   <th>N° Ventas</th>
-                  <th>Servicio</th>
+                  <!-- <th>Servicio</th> -->
                 </tr>
               </thead>
-              <tbody>
+              <tbody *ngFor="let dato of listsBySeller">
                 <tr>
-                  <td> Liz</td>
-                  <td> 3</td>
-                  <td> Línea Fija</td>
+                  <td>{{dato.nombre}}</td>
+                  <td>{{dato.total_ventas}}</td>
                 </tr>
-                <tr>
-                  <td> Zumi</td>
-                  <td> 4</td>
-                  <td> Línea Fija</td>
-                </tr>
-                <tr>
-                  <td> Liz</td>
-                  <td> 3</td>
-                  <td> Línea Fija</td>
-                </tr>
-                <tr>
-                  <td> Zumi</td>
-                  <td> 4</td>
-                  <td> Línea Fija</td>
-                </tr>
+
+
               </tbody>
             </table>
           </div>
         </div>
-      </div>
     </div>
 </div>
 
